<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_payment_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/card_name_text_view"
        android:layout_width="340dp"
        android:layout_height="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="34dp"
        android:background="#DA2E2E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_name_text" />

    <EditText
        android:id="@+id/card_name_text"
        android:layout_width="338dp"
        android:layout_height="45dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:ems="10"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expiry_date_text_view" />

    <TextView
        android:id="@+id/postal_code_text_view"
        android:layout_width="174dp"
        android:layout_height="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="202dp"
        android:layout_marginRight="202dp"
        android:background="#DA2E2E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postal_code_text" />

    <TextView
        android:id="@+id/security_code_text_view"
        android:layout_width="155dp"
        android:layout_height="30dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:background="#DA2E2E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expiry_date_text_view"
        app:layout_constraintTop_toBottomOf="@+id/security_code_text" />

    <TextView
        android:id="@+id/expiry_date_text_view"
        android:layout_width="176dp"
        android:layout_height="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:background="#DA2E2E"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/security_code_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expiry_date_text" />

    <TextView
        android:id="@+id/card_number_text_view"
        android:layout_width="340dp"
        android:layout_height="30dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:background="#DA2E2E"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_number_text" />

    <TextView
        android:id="@+id/cardpay_header_text_view"
        android:layout_width="341dp"
        android:layout_height="47dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:background="#03A9F4"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/CARD_PAY_HEADER"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pay_button"
        android:layout_width="182dp"
        android:layout_height="50dp"
        android:layout_marginStart="114dp"
        android:layout_marginLeft="114dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        android:layout_marginBottom="61dp"
        android:background="#4CAF50"
        android:text="@string/PAY_NOW"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postal_code_text_view" />

    <EditText
        android:id="@+id/card_number_text"
        android:layout_width="336dp"
        android:layout_height="44dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardpay_header_text_view" />

    <EditText
        android:id="@+id/postal_code_text"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="202dp"
        android:layout_marginRight="202dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_name_text_view" />

    <EditText
        android:id="@+id/security_code_text"
        android:layout_width="155dp"
        android:layout_height="44dp"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/security_code_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expiry_date_text"
        app:layout_constraintTop_toBottomOf="@+id/card_number_text_view" />

    <EditText
        android:id="@+id/expiry_date_text"
        android:layout_width="177dp"
        android:layout_height="44dp"
        android:layout_marginStart="34dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toStartOf="@+id/security_code_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_number_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>
