<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/payment_options_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/card_payment_button"
        android:layout_width="368dp"
        android:layout_height="58dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="#4CAF50"
        android:textSize="20sp"
        android:text="@string/CARD_PAY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_payment_button" />

    <Button
        android:id="@+id/email_payment_button"
        android:layout_width="368dp"
        android:layout_height="58dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="#009688"
        android:textSize="20sp"
        android:text="@string/EMAIL_PAY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebook_payment_button" />

    <Button
        android:id="@+id/apple_payment_button"
        android:layout_width="368dp"
        android:layout_height="58dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="#2196F3"
        android:textSize="20sp"
        android:text="@string/APPLE_PAY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/google_payment_button"
        android:layout_width="368dp"
        android:layout_height="58dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="#E91E63"
        android:textSize="20sp"
        android:text="@string/GOOGLE_PAY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apple_payment_button" />

    <Button
        android:id="@+id/facebook_payment_button"
        android:layout_width="368dp"
        android:layout_height="58dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="#FFC107"
        android:textSize="20sp"
        android:text="@string/FACEBOOK_PAY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_payment_button" />

    <Button
        android:id="@+id/point_payment_button"
        android:layout_width="368dp"
        android:layout_height="58dp"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="#9C27B0"
        android:text="@string/POINTS_PAY"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_payment_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
